# internal/weddingphoto/model/GetPhotosResponse.go
@@ -1,6 +1,8 @@
 package model
 
-// AddPhotoResponse rappresenta la risposta per l'aggiunta di una foto
+// GetPhotosResponse rappresenta la risposta per il recupero delle foto con paginazione
 type GetPhotosResponse struct {
-	Photos []Photo `json:"photos" binding:"required"` // Nome della foto aggiunta
+	Photos     []Photo `json:"photos" binding:"required"`      // Lista delle foto
+	Page       int     `json:"page" binding:"required"`        // Pagina corrente
+	TotalPages int     `json:"total_pages" binding:"required"` // Numero totale di pagine
 }
